--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(13.jpg);
+    background-image: url(Bakcground.jpg);
    
     background-size: cover;
     background-position: center;
@@ -59,7 +59,7 @@ nav ul li a::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #a9647a;
+    background: #aeff2b;
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -85,10 +85,15 @@ nav ul li a:hover::after{
     font-weight: bold;
     font-size: 85px;
     margin-top: 20px;
+    margin-left: 520px;
+    color : rgb(52, 116, 201);
 }
 
 .header-text h1 span{
     color: #de4878;
+    text-align: center;
+    text-shadow: red;
+
 }
 
 /* --------------------about-------------------- */
