--- a/style.css
+++ b/style.css
@@ -101,10 +101,10 @@ nav ul li a:hover::after{
 #about{
     padding: 80px 0;
     color: #3b413f;
-    
+
 }
 p{
-
+    margin-top: 0%;
     font-size: larger;
     text-align: justify;
 }
@@ -382,6 +382,7 @@ p{
 .btn.btn2{
     display: inline-block;
     background: #ff004f;
+    font-size: 18px;
 }
 
 .contact-right form{
