--- a/form.css
+++ b/form.css
@@ -1,16 +1,19 @@
 body {
     font-family: Arial, sans-serif;
+    background-image: url(Back2.jpg);
     margin: 20px;
 }
 
 form {
     max-width: 600px;
     margin: auto;
+    
 }
 
 label {
     display: block;
     margin-top: 10px;
+    color: white;
 }
 
 input, select {
@@ -36,4 +39,5 @@ button:hover {
 
 h2{
     text-align: center;
+    color: white;
 }
