--- a/form.css
+++ b/form.css
@@ -61,13 +61,16 @@ html {
 form {
     max-width: 600px;
     margin: auto;
+
     
 }
 
 label {
     display: block;
     margin-top: 10px;
-    color: white;
+    color: rgb(255, 255, 255);
+    
+    
 }
 
 input, select {
@@ -75,6 +78,17 @@ input, select {
     padding: 8px;
     margin-top: 5px;
     margin-bottom: 10px;
+    border-radius: 13px;
+    box-sizing: border-box;
+}
+
+
+textarea{
+  width: 100%;
+    padding: 8px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    border-radius: 13px;
     box-sizing: border-box;
 }
 
@@ -83,15 +97,18 @@ button {
     color: white;
     padding: 10px 15px;
     border: none;
-    border-radius: 4px;
+    border-radius: 20px;
     cursor: pointer;
+    border-color: red;
 }
 
 button:hover {
-    background-color: #45a049;
+    
+    background-color: #20a05a;
 }
 
 h2{
     text-align: center;
     color: white;
+    
 }
