--- a/style.css
+++ b/style.css
@@ -15,6 +15,20 @@ body{
     color: #fff;
 }
 
+.regbtn3 {
+    top:2%;
+    left:90%;
+    right: 5%;
+    width:100px;
+    height:40px;
+    position: absolute;
+    border-radius: 20px;
+    width: 140px;
+    background-color: #aeff2b;
+    cursor: pointer;
+    }
+
+
 #header{
     width: 100%;
     height: 100vh;
