--- a/style.css
+++ b/style.css
@@ -205,6 +205,38 @@ p{
 }
 
 
+button.regbtn3 {
+    background-color: #1f1f1f;
+    width: 300px;
+    height: 50px;
+    display: inline-block;
+    cursor: pointer;
+    text-decoration: none;
+    border: 3px solid #1c68ab;
+    color: #ffffff;
+    border-radius: 20px;
+    margin-top: 1%;
+    position: relative;
+    isolation: isolate;
+  }
+  
+  button.regbtn3::after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    background: #1c68ab;
+    inset: 0;
+    
+    scale: 0 1;
+    transform-origin: right;
+    transition: scale 450ms;
+  }
+  
+  button.regbtn3:hover::after, button.regbtn3:focus-visible::after {
+    transform-origin: left;
+    scale: 1 1;
+  }
+
 
 
 /* -----------------------------services -------------------- */
