--- a/style.css
+++ b/style.css
@@ -15,42 +15,6 @@ body{
     color: #fff;
 }
 
-button.regbtn3 {
-    top:8px;
-    left: 0px;
-    right: 60%;
-    max-width: 200px;
-    width: 20px;
-    height:40px;
-    position: absolute;
-    border-radius: 20px;
-    width: 3%;
-    background-color: #ce7714;
-    cursor: pointer;
-
-    }
-
-    button.regbtn3::after {
-        content: "";
-        position: absolute;
-        z-index: -1;
-
-        inset: 0;
-        border-radius: 20px;
-        scale: 0 1;
-        transform-origin: right;
-        transition: scale 450ms;
-      }
-    
-      button.regbtn3:hover::after, button.regbtn3:focus-visible::after {
-        transform-origin: left;
-        border-radius: 20px;
-        background-color: #dd2069;
-        scale: 1 1;
-      }
-
-    
-
 #header{
     width: 100%;
     height: 100vh;
@@ -227,38 +191,6 @@ p{
 }
 
 
-button.regbtn3 {
-    background-color: #1f1f1f;
-    width: 300px;
-    height: 50px;
-    display: inline-block;
-    cursor: pointer;
-    text-decoration: none;
-    border: 3px solid #1c68ab;
-    color: #ffffff;
-    border-radius: 20px;
-    margin-top: 1%;
-    position: relative;
-    isolation: isolate;
-  }
-  
-  button.regbtn3::after {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    background: #1c68ab;
-    inset: 0;
-    
-    scale: 0 1;
-    transform-origin: right;
-    transition: scale 450ms;
-  }
-  
-  button.regbtn3:hover::after, button.regbtn3:focus-visible::after {
-    transform-origin: left;
-    scale: 1 1;
-  }
-
 
 
 /* -----------------------------services -------------------- */
@@ -410,7 +342,7 @@ button.regbtn3 {
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     display:inline-block;
     margin: 1.5%;
-    width: 220px;
+    width: 220 px;
     border: 1px solid #605d8b;
     padding: 14px 50px;
     border-radius: 100px;
@@ -422,7 +354,23 @@ button.regbtn3 {
     text-align:center;
     
 }
-
+.btn3{
+   
+        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        display:inline-block;
+        margin: 1.5%;
+        width: 220 px;
+        border: 1px solid #605d8b;
+        padding: 14px 50px;
+        border-radius: 100px;
+        text-decoration: none;
+        margin-left: 145px;
+        background-color: rgb(0, 130, 190);
+        color: rgb(255, 255, 255);
+        transition: background 0.5s;
+        text-align:center;
+      
+}
 
 .btn:hover{
     background: #6ccfcf;
@@ -710,3 +658,19 @@ nav .fa-solid{
     position: relative;
     top: 35%; }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
