--- a/style.css
+++ b/style.css
@@ -422,6 +422,10 @@ p{
     background: #6ccfcf;
 }
 
+
+
+
+
 /* ---------------------contact------------------- */
 
 .contact-left{
@@ -739,7 +743,15 @@ nav .fa-solid{
     position: relative;
     top: 35%; }
 
+    a.btn2:active {
+        border-width: 0px 0px 2px 0px; 
+        transform: translateY(4px);
+        opacity: 0.9;
+      }
 
+    a.btn2{
+        transition: .1s;
+    }
 
 
 
